doc: add doctumentacion about auth user
